# explauto

./: .gitignore  setup.py
doc/: about.md  api.md  conf.py  experiment.md  explauto.agent.md  explauto.environment.md  explauto.evaluation.md  explauto.experiment.md  explauto.interestmodel.md  explauto.models.md  explauto.sensorimotormodel.md  explauto.utils.md  extra.md  index.md  installation.md  notebook.md  pool.md
explauto/agent/: __init__.py  agent.py  retico_agent.py
explauto/environment/: __init__.py  dynamic_environment.py  environment.py  modular_environment.py
explauto/evaluation/: evaluation.py
explauto/experiment/: experiment.py  log.py  pool.py
explauto/interest_model/: __init__.py  competences.py  discrete_progress.py  gmm_progress.py  interest_model.py  mouse_pointer.py  random.py  test_tree.py  tree.py
explauto/models/: dataset.py  dmp.py  gaussian.py  gmminf.py  imle_model.py  motor_primitive.py  tests.py
notebook/: 05 Customising configurations, environments and agents.ipynb  Learning the IK of the arm of a simulated Poppy using Explauto.ipynb  comparing_motor_goal_stategies.ipynb  discrete_curiosity.ipynb  full_tutorial.ipynb  goal_babbling_direct_optimization.ipynb  introducing_curiosity_learning.ipynb  learning_sensorimotor_models.ipynb  learning_with_environment_context.ipynb  learning_with_sensorimotor_context.ipynb  pendulum.ipynb  plotting_npendulum.ipynb  running_experiment_pool.ipynb  setting_basic_experiment.ipynb  setting_environments.ipynb  summary_available_models.ipynb
sandbox/: pyproject.toml  terminology.ipynb
(+44 files in other folders)
