[tool.poetry]
name = "thesis_sandbox"
version = "0.1.0"
description = ""
authors = ["catherinehenry <catherinemshenry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
explauto = { path = "../explauto_fork/explauto",  develop = true }
black = "^22.8.0"
matplotlib = "^3.5.3"
seaborn = "^0.12.0"
pandas = "1.3.5"
spacy = "^3.4.1"
tqdm = "4.64.1"
ipywidgets = "^8.0.2"
protobuf = "3.19.4"
nltk = "^3.7"
scikit-learn = "1.0.2"
torch = "1.12.1"
nbconvert = "^7.1.0"
scikit-image = "^0.19.3"
tensorflow-metal = "^0.6.0"
transformers = "^4.23.1"
numpy = "^1.23.4"
joblib = "^1.2.0"
flair = "^0.11.3"
bokeh = "2.4.3"
panel = {version = "0.14.2a6", allow-prereleases = true}
plotly = "^5.11.0"
umap-learn = {version = "^0.5.3", extras = ["plot"]}
ipympl = "^0.9.2"
llvmlite = "^0.39.1"
jupyterlab = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
